# Biological_Neural_Network

./: .gitignore  README.md  bnn.py  bnn_main.py  continuous_impulse_encoding.py  correlation_list.csv  correlation_list_2.csv  eeg_file_mathematics_subject.csv  eeg_signal_processing.py  explore_correlations.py  main.py  operations.py  pyproject.toml  req.txt  requirements.txt
