[tool.poetry]
name = "bnn"
version = "0.1.0"
description = ""
authors = ["cristinaa211 <popovici.cristina21@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
numpy = "^1.24.1"
sklearn = "^0.0.post1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
